   Patches: Jorge Arellano
+- Connected signals to <li> elements (fixes links within lists).
 - Enabled text, background-color and geometry in preferences.
 - Enabled clicking over image links.
 - Improved notification upon leaving links.
 - Implemented image-link URL showing in status bar.
 - Added missing size-parsing for the <hr> element.
   Patches: place
+- Fixed a problem with locally-installed dpis.
   Patch: place, Jorge Arellano
+- Fixed a va_list-related SEGFAULT on 64bit-arch in dStr_vsprintfa().
   Added const declarations in html parser.
   Patch: Vincent Thomasset
+- Fixed void to int conversions for 64bit-arch.
   Patch: Jorge Arellano, higuita
+- Added a strndup() replacement in dw2
   Patch: Alexander Becher, Johannes Hofmann, Jorge Arellano
+- Fixed calcHashValue() to only return non-negative numbers (was SEGFAULT).
 - Improved scrolling performance on large pages by copying screen data
    instead of rendering.
 - Updated configure.in to check only for fltk2-config.
 - Implemented drag-scrolling with the mouse's middle button.
 - Disabled double buffering (good for debugging redraws).
   Patches: Johannes Hofmann
+- Improved FLTK library detection at configure time.
   Patch: Frank Gevaerts

 TODO:

 - test no_proxy (set a list in dillorc).

-----------------------------------------------------------------------------


0.8.5-pre-dw-redesign-1 [internal]
- Prototype

dillo-0.8.3-pre-dw-redesign-3 [Aug 30, 2004]
 - * Fixed bug GtkDwViewport, which caused some redraws to be ignored.
   * Added GdkDwPreview.
   Patches: Sebastian Geerken

        
dillo-0.8.3-pre-dw-redesign-2 [Aug 28, 2004]
 - * Added images to the current state of the redesign.
     - New module Imgbuf, see doc/Imgbuf.txt for details.
   Patch: Sebastian Geerken

        
dillo-0.8.3-pre-dw-redesign-1 [Aug 25, 2004]
 - * Introduced an abstraction layer between Dw and Gtk+. See README-port and
     doc/DwRender.txt for more details.
   Patch: Sebastian Geerken

